added deploy step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,32 @@
-vse: &vse
-  docker:
-    - image: circleci/node:8.11.3
-
+vse:
+  docker: &ref_0
+    - image: 'circleci/node:8.11.3'
 version: 2.1
 jobs:
   build:
-    <<: *vse
+    docker: *ref_0
     steps:
       - checkout
       - run: npm install
       - run: npm run test
       - run: npm build
-      - persist_to_workspace: 
+      - persist_to_workspace: null
         root: .
         paths:
-            - .
+          - .
   deploy:
-    <<: *vse
+    docker: *ref_0
     steps:
-      - attach_workspace:
+      - attach_workspace: null
         at: .
-      - run: 
+      - run: null
         command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
-
 workflows:
   version: 2.1
   build:
     jobs:
       - build
-      - deploy:
+      - deploy: null
         requires:
           - build
         filters:
