--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,36 @@
-vse:
-  docker: &ref_0
-    - image: 'circleci/node:8.11.3'
+vse: &vse
+  docker:
+    - image: circleci/node:8.11.3
+
 version: 2.1
 jobs:
   build:
-    docker: *ref_0
+    <<: *vse
     steps:
       - checkout
       - run: npm install
       - run: npm run test
-      - run: npm build
-      - persist_to_workspace: null
-        root: .
-        paths:
-          - .
+      - run: npm run build
+      - persist_to_workspace:
+         root: .
+         paths:
+            - .
   deploy:
-    docker: *ref_0
-    steps:
-      - attach_workspace: null
-        at: .
-      - run: null
-        command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
+     <<: *vse
+     steps:
+        - attach_workspace:
+           at: .
+        - run:
+           command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
+
 workflows:
   version: 2.1
   build:
     jobs:
       - build
-      - deploy: null
-        requires:
-          - build
-        filters:
-          branches:
-            only: main
+      - deploy:
+         requires:
+            - build
+         filters:
+            branches:
+               only: master
